[package]
name = "kartlytics-list"
version = "0.1.0"
authors = ["David Pacheco <dap@oxidecomputer.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.0"
env_logger = "0.8.3"
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
serde = "1.0"
serde_json = "1.0"
structopt = "0.3.21"

[dependencies.chrono]
version = "0.4.19"
features = [ "serde" ]

[dependencies.tokio]
version = "1.0"
features = [ "full" ]
